enables word wraps in lihtbox to hopefully fix IE issues with super long words git push

--- a/app/assets/stylesheets/public/public_gallery.css.scss
+++ b/app/assets/stylesheets/public/public_gallery.css.scss
@@ -168,6 +168,7 @@ body {
     p {
       font-size: 13px;
       line-height: 14px;
+      word-wrap: break-word;
     }
     .photoowner {
       font-size: 14px;
